--- a/index.ipynb
+++ b/index.ipynb
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -186,14 +186,14 @@
        "'CEO'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "\"C\""
+    "\"Ceo\".upper()"
    ]
   },
   {
