Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -158,14 +158,15 @@
        "'Art vandelay'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"art vandelay\".capitalize()"
+    "name = \"art vandelay\"\n",
+    "name.capitalize()"
    ]
   },
   {
