Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -165,8 +165,7 @@
    ],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "name = \"art vandelay\"\n",
-    "name.capitalize()"
+    "\"art\""
    ]
   },
   {
