--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -241,17 +241,17 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.com'"
+       "'wwwvandelay.com'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "string"
+    "str('www'+'vandelay.com')"
    ]
   },
   {
